--- a/app/views/modules/writer/story.html
+++ b/app/views/modules/writer/story.html
@@ -21,6 +21,9 @@
                 <i class="fa fa-chain-broken"></i>
                 <span>Add pending</span>
             </button>
+            <button ng-click="story.insertObject()">
+                <span>Insert</span>
+            </button>
         </div>
     </div>
 </div>
