Add placeholder for input field based on selected item.

--- a/app/views/modules/writer/story.html
+++ b/app/views/modules/writer/story.html
@@ -13,7 +13,7 @@
 <div class="editor-content">
     <scenario-view scenarios="story.scenarios"></scenario-view>
     <div class="tools">
-        <input type="text">
+        <input type="text" placeholder="{{story.inputPlaceholder}}">
 
         <div class="select"></div>
         <div class="actions">
