--- a/app/scss/components/modules/variable-view.scss
+++ b/app/scss/components/modules/variable-view.scss
@@ -27,6 +27,11 @@ div.layout > .has-aside {
 
 }
 
+.twitter-typeahead {
+    // typeahead styling
+
+}
+
 .sidebar {
     position: fixed;
     top: $header-height * 2;
