--- a/app/views/modules/writer/directives/scenario-view.html
+++ b/app/views/modules/writer/directives/scenario-view.html
@@ -5,7 +5,7 @@
         <div class="selectable" ng-class="{'active':selectedItem.isItemSelected(scenario, $index)}"
              ng-click="selectedItem.setSelectedItem(scenario)">
             <div class="title">
-                <i class="fa fa-bars handle" data-toggle="collection"></i>
+                <i class="fa fa-bars handle" data-toggle="story"></i>
                 <input type="text" ng-model="scenario.editorTitle" ng-init="scenario.editorTitle = scenario.title;">
             </div>
             <div class="actions">
@@ -14,7 +14,7 @@
                     <i class="fa fa-check"></i>
                     <span>Apply</span>
                 </button>
-                <button ng-click="scenarioView.deleteScenario(scenario.id)">
+                <button ng-click="scenarioView.deleteItem(scenarios, $index)">
                     <i class="fa fa-trash-o"></i>
                     <span>Delete</span>
                 </button>
@@ -31,7 +31,7 @@
                     </div>
                     <div class="actions">
                         <i class="fa fa-info-circle" ng-show="scenarioView.isStepIncomplete(step)"></i>
-                        <i class="fa fa-trash-o"></i>
+                        <i class="fa fa-trash-o" ng-click="scenarioView.deleteItem(scenario.steps, $index)"></i>
                     </div>
                 </div>
             </li>
