--- a/app/views/modules/writer/story.html
+++ b/app/views/modules/writer/story.html
@@ -11,7 +11,17 @@
     </div>
 </div>
 <div class="editor-content">
-    <scenario-view scenarios="story.scenarios"></scenario-view>
+    <ul id="main-content-list" class="main-content-list">
+
+        <li class="ic cl list-animate">
+            <div class="selectable" ng-class="{'active':story.selectedItem.isItemSelected({id:1})}" ng-click="story.selectedItem.setSelectedItem({id:1})">
+                <div class="title">
+                    <span class="separate">scenarios</span>
+                </div>
+            </div>
+            <scenario-view scenarios="story.scenarios" class="ic cl list-animate"></scenario-view>
+        </li>
+    </ul>
     <div class="tools">
         <input class="typeahead" type="text" placeholder="{{story.inputPlaceholder}}" sf-typeahead options="story.typeAheadOptions" datasets="story.stepsDataset" ng-model="story.inputValue" >
 
