--- a/app/views/modules/writer/story.html
+++ b/app/views/modules/writer/story.html
@@ -7,7 +7,7 @@
         <input type="text" ng-model="story.title">
     </div>
     <div class="actions">
-        <i class="fa fa-search-minus" ng-click="story.toggleVisible()"></i>
+        <i class="fa" ng-class="{'inactive fa-search-minus': story.hasVisibleSidebar(), 'fa-search-plus': !story.hasVisibleSidebar()}" ng-click="story.toggleVisible()"></i>
     </div>
 </div>
 <div class="editor-content">
