Fix input and icon styling for the story writing top filter

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -12,6 +12,7 @@
 @import 'components/vendor/mixins';
 @import 'components/vendor/progress';
 @import 'components/mixins';
+@import 'components/input';
 @import 'components/intro';
 @import 'components/preloader';
 @import 'components/layout';
