--- a/app/scss/components/modules/top-filter.scss
+++ b/app/scss/components/modules/top-filter.scss
@@ -13,7 +13,10 @@
 
     > .filters {
         float: left;
+    }
 
+    > .filters,
+    > .actions {
         > i {
             margin: (($header-height - $section-header-font-size) / 4.5) 0 0 $filter-button-padding / 2;
             font-size: $section-header-font-size * 1.3;
@@ -61,18 +64,14 @@
     > .title {
         float: left;
 
-
         input {
-            margin: ($header-height - 1.45em) / 2 - $base-spacing / 3 0;
-            border: 1px;
-            line-height: 1.45em;
-            box-sizing: border-box;
-            background-color: lighten($base-accent-color, 5%);
-            border-color: darken($base-accent-color, 10%);
-        }
-
-        input:focus {
-
+            margin: (($header-height - $section-header-font-size) / 9.5) $filter-button-padding / 2;
+            margin-bottom: 0;
+            font-size: $section-header-font-size;
+            line-height: $section-header-font-size / 4;
+            background-color: $list-input-bg-color;
+            color: $inverted-input-color;
+            border: 0;
         }
 
     }
