--- a/app/scss/components/modules/top-filter.scss
+++ b/app/scss/components/modules/top-filter.scss
@@ -64,7 +64,7 @@
     > .title {
         float: left;
 
-        input {
+        > input {
             margin: (($header-height - $section-header-font-size) / 9.5) $filter-button-padding / 2;
             margin-bottom: 0;
             font-size: $section-header-font-size;
@@ -72,6 +72,7 @@
             background-color: $list-input-bg-color;
             color: $inverted-input-color;
             border: 0;
+            width: $section-header-input-width;
         }
 
     }
