--- a/app/scss/theme/variables.scss
+++ b/app/scss/theme/variables.scss
@@ -88,6 +88,7 @@ $section-list-icon-color:               lighten($dark-gray, 5%);
 $section-header-font-size:              modular-scale($base-font-size, 1, $perfect-fifth);
 $section-header-icon-top:               .5em;
 $section-header-icon-size:              modular-scale($base-font-size, 1, $octave);
+$section-header-input-width:            20em;
 $section-list-side-padding:             1em;
 $section-list-icon-left:                $header-height / $section-header-font-size / 5 * 1em;
 $section-list-text-pad:                 $section-list-icon-left;
