--- a/app/views/modules/writer/story.html
+++ b/app/views/modules/writer/story.html
@@ -1,9 +1,8 @@
-<div class="top-filter filter-1 ic selectable"
+<div class="top-filter ic selectable"
      ng-class="{'active':story.selectedItem.isItemSelected(null)}" ng-click="story.selectedItem.setSelectedItem(null)">
-    <i class="fa" ng-class="{'fa-chevron-left': !story.createNew, 'fa-times': story.createNew}"
-       ng-click="story.list()"></i>
-
+    <i class="fa" ng-class="{'fa-chevron-left': !story.createNew, 'fa-times': story.createNew}" ng-click="story.list()"></i>
     <div class="title">
+        <span class="verbose" translate="WRITER.STORIES.BEFORE_NEW_TITLE"></span>
         <input type="text" ng-model="story.title">
     </div>
     <div class="actions">
@@ -12,11 +11,10 @@
 </div>
 <div class="editor-content">
     <ul id="main-content-list" class="main-content-list">
-
-        <li class="ic cl list-animate">
+        <li class="cl list-animate">
             <div class="selectable" ng-class="{'active':story.selectedItem.isItemSelected({id:1})}" ng-click="story.selectedItem.setSelectedItem({id:1})">
                 <div class="title">
-                    <span class="separate">scenarios</span>
+                    <span class="separate" translate="WRITER.STORIES.LIST.SCENARIOS"></span>
                 </div>
             </div>
             <scenario-view scenarios="story.scenarios" class="ic cl list-animate"></scenario-view>
@@ -24,7 +22,6 @@
     </ul>
     <div class="tools">
         <input class="typeahead" type="text" placeholder="{{story.inputPlaceholder}}" sf-typeahead options="story.typeAheadOptions" datasets="story.stepsDataset" ng-model="story.inputValue" >
-
         <div class="select"></div>
         <div class="actions">
             <button ng-show="story.isString(story.inputValue)">
