Change angular version to 1.4 and fix function call on boolean (highlighted by $compile)

--- a/app/views/modules/runner/available.html
+++ b/app/views/modules/runner/available.html
@@ -71,4 +71,4 @@
     </li>
 </ul>
 <h1 class="hero-notice" translate="RUNNER.AVAILABLE.NO_STORIES" ng-show="filteredBooks.length === 0 && initialized()"></h1>
-<div pagination class="pagination appear-delayed" has-next="available.hasMorePages()" current-page="available.currentPage" list-ref="available.storyListRef" />
+<div pagination class="pagination appear-delayed" has-next="available.hasMorePages" current-page="available.currentPage" list-ref="available.storyListRef" />
