--- a/app/views/modules/writer/story.html
+++ b/app/views/modules/writer/story.html
@@ -10,7 +10,7 @@
     </div>
 </div>
 <div class="editor-content">
-    <ul id="main-content-list" class="main-content-list">
+    <ul id="main-content-list" story-collapse class="main-content-list">
         <li class="cl list-animate">
             <div class="selectable" ng-class="{'active':story.selectedItem.isItemSelected({id:1})}" ng-click="story.selectedItem.setSelectedItem({id:1})">
                 <div class="title">
