--- a/app/views/modules/writer/story.html
+++ b/app/views/modules/writer/story.html
@@ -12,7 +12,7 @@
 <div class="editor-content">
     <ul id="main-content-list" story-collapse class="main-content-list">
         <li class="cl list-animate">
-            <div class="selectable" ng-class="{'active':story.selectedItem.isItemSelected({id:0})}" ng-click="story.selectedItem.setSelectedItem({id:0})">
+            <div ng-class="{'active':story.selectedItem.isItemSelected({id:0})}" ng-click="story.selectedItem.setSelectedItem({id:0})">
                 <div class="title">
                     <span class="separate" translate="WRITER.STORIES.LIST.PROLOGUE"></span>
                 </div>
@@ -20,7 +20,7 @@
             <scenario-view scenarios="story.prologue" class="ic cl list-animate"></scenario-view>
         </li>
         <li class="cl list-animate">
-            <div class="selectable" ng-class="{'active':story.selectedItem.isItemSelected({id:1})}" ng-click="story.selectedItem.setSelectedItem({id:1})">
+            <div ng-class="{'active':story.selectedItem.isItemSelected({id:1})}" ng-click="story.selectedItem.setSelectedItem({id:1})">
                 <div class="title">
                     <span class="separate" translate="WRITER.STORIES.LIST.SCENARIOS"></span>
                 </div>
@@ -28,7 +28,7 @@
             <scenario-view scenarios="story.scenarios" class="ic cl list-animate"></scenario-view>
         </li>
         <li class="cl list-animate">
-            <div class="selectable" ng-class="{'active':story.selectedItem.isItemSelected({id:2})}" ng-click="story.selectedItem.setSelectedItem({id:2})">
+            <div ng-class="{'active':story.selectedItem.isItemSelected({id:2})}" ng-click="story.selectedItem.setSelectedItem({id:2})">
                 <div class="title">
                     <span class="separate" translate="WRITER.STORIES.LIST.EPILOGUE"></span>
                 </div>
