Prepare for the styling and behavior of the contextual sidebar by moving expand-collapse inside the directive

--- a/app/scss/components/layout.scss
+++ b/app/scss/components/layout.scss
@@ -118,12 +118,12 @@ div.layout {
         }
     }
 
-    > aside,
+    > nav,
     > .main {
         top: $header-height;
     }
 
-    > aside {
+    > nav {
         width: $menu-size;
         background-color: $layout-side-bg-color;
         position: fixed;
