--- a/app/views/modules/writer/directives/scenario-view.html
+++ b/app/views/modules/writer/directives/scenario-view.html
@@ -9,9 +9,8 @@
             <div class="actions">
                 <button ng-click="scenarioView.deleteItem(scenarios, $index)">
                     <i class="fa fa-trash-o"></i>
-                    <span>Delete</span>
+                    <span translate="WRITER.STORIES.SCENARIOS.DELETE"></span>
                 </button>
-                <i class="fa fa-tag"></i>
             </div>
         </div>
         <ul class="scenario-content-list" sortable="scenario.steps" handle="stepListHandler" connect-with="scenarioContentListClass">
