--- a/app/scss/theme/fancify.scss
+++ b/app/scss/theme/fancify.scss
@@ -53,7 +53,7 @@ div.layout {
         }
     }
 
-    > aside {
+    > nav {
         @include transition(left cubic-bezier(0, 0, .2, 1) .5s);
         left: 0;
 
