--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -14,7 +14,7 @@
         </div>
     </div>
 </header>
-<aside class="ng-hide" ng-controller="MenuCtrl as menu" ng-show="layout.loaded">
+<nav class="ng-hide" ng-controller="MenuCtrl as menu" ng-show="layout.loaded">
     <ul class="modules">
         <li ng-repeat="module in menu.modules" title="{{module.title}}" ng-click="go(module.url)" ng-class="{'active': module.active}"><i class="fa {{module.id | lowercase}}"></i><span class="badge" ng-show="module.badge > 0">{{module.badge}}</span></li>
     </ul>
@@ -22,7 +22,7 @@
     <ul class="sections">
         <li class="list-animate" ng-repeat="section in menu.sections" ng-click="go(section.url)" ng-class="{'active': section.active}"><span>{{section.title}}</span><span class="badge" ng-show="section.badge > 0">{{section.badge}}</span></li>
     </ul>
-</aside>
-<div class="main ng-hide" ng-class="{'has-aside': layout.hasVisibleSidebar()}" ng-show="layout.loaded" ng-view></div>
-<div class="sidebar ng-hide" ng-show="layout.loaded" sidebar></div>
+</nav>
+<div class="main ng-hide" ng-class="{'has-aside': layout.hasSidebar()}" ng-show="layout.loaded" ng-view></div>
+<aside class="sidebar ng-hide" ng-show="layout.loaded && layout.hasSidebar()" sidebar="true"></aside>
 <footer ng-controller="FeedbackCtrl as fb" class="feedback" ng-class="fb.feedback.type" ng-show="fb.show"><span>{{fb.feedback.message}}</span><i class="fa fa-times" ng-click="fb.hide()"></i></footer>
