Fix responsive styling for the editor avoiding line drop-offs

--- a/app/scss/components/modules/content-list.scss
+++ b/app/scss/components/modules/content-list.scss
@@ -49,6 +49,7 @@
 
             > div.title {
                 float: left;
+                max-width: 80%;
 
                 &.editable {
                     position: relative;
