Add a modal window directive for variable editing.

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -28,6 +28,7 @@
 @import 'components/modules/editor/editor-layout';
 @import 'components/modules/editor/sidebar';
 @import 'components/modules/editor/variable-blocks';
+@import 'components/modules/editor/modal';
 
 // finally enhance the components with some theme magic
 @import 'theme/styles';
