--- a/app/scss/theme/variables.scss
+++ b/app/scss/theme/variables.scss
@@ -166,3 +166,7 @@ $run-progress-scenario-done-bg:         darken($light-gray, 8%);
 $tooltip-bg-color:                      $dark-gray;
 $tooltip-color:                         $highlight-color;
 $tooltip-border-radius:                 .3em;
+
+// sidebar formatting
+$sidebar-expanded-width:                19em;
+$sidebar-collapsed-width:               3em;
