--- a/app/scss/components/modules/editor/editor-layout.scss
+++ b/app/scss/components/modules/editor/editor-layout.scss
@@ -6,7 +6,6 @@ div.editor-content {
 
     > div {
         overflow: hidden;
-
     }
 
     .title, .title span {
@@ -18,6 +17,10 @@ div.editor-content {
     }
 }
 
-div.layout > .has-aside {
-    margin-right: 19em;
+div.layout > .has-sb {
+    margin-right: $sidebar-collapsed-width;
+
+    &.sb-expand {
+        margin-right: $sidebar-expanded-width;
+    }
 }
