--- a/app/scss/components/modules/editor/modal.scss
+++ b/app/scss/components/modules/editor/modal.scss
@@ -34,6 +34,11 @@
             border-bottom-width: 0;
             cursor: pointer;
         }
+
+        li.selected {
+            background-color: lightgrey;
+        }
+
         li:last-child {
             border: 1px solid black;
             border-bottom-width: 0;
